--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       
       <ul>
     <li>Github</li>
-    <li>Youtube</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
     <li>Wbs</li>
 </ul>
 
