--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <html>
     <head>
-        <title>My awesome web page</title>
+        <title>Luca's web page</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
   <body>
-    Hello there, awesome person! 
-      <h1>I'm a header 1!</h1>
+    Hello guys! 
+      <h1>My web page 1!</h1>
 <img src="https://avatars.githubusercontent.com/u/107623602?v=4">
       
       <ul>
-    <li>Github</li>
-      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
-    <li>Wbs</li>
+    
+     <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
+     <li>My favorite site is <a href="https://platform.wbscodingschool.com/">Wbs</a>!</li>
 </ul>
 
 
