--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <body>
     Hello guys! 
-      <h1> Luca Stringhetti fisrt web page!</h1>
+      <h1> Luca Stringhetti first web page!</h1>
 <img src="https://avatars.githubusercontent.com/u/107623602?v=4">
       
       <ul>
